[gd_scene load_steps=10 format=3 uid="uid://c1s7v35ep3ru"]

[ext_resource type="Script" uid="uid://r04tjfwwnya6" path="res://chili.gd" id="1_kbky6"]
[ext_resource type="Texture2D" uid="uid://da8xlf78wiqv8" path="res://assets/imgs/chili.png" id="2_2c5vv"]
[ext_resource type="Texture2D" uid="uid://6tev2qv3jux4" path="res://assets/imgs/chili_particle.png" id="2_6urnh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kbky6"]
radius = 324.039

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6urnh"]
height = 74.0

[sub_resource type="Animation" id="Animation_bcgbp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_s1821"]
resource_name = "shoot"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_kbky6"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qm4jg"]
_data = {
&"RESET": SubResource("Animation_bcgbp"),
&"idle": SubResource("Animation_kbky6"),
&"shoot": SubResource("Animation_s1821")
}

[node name="Chili" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_kbky6")
min_xp_dropped = 10
particle_texture = ExtResource("2_6urnh")
metadata/_custom_type_script = "uid://bkrndwpfimsd5"

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_kbky6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2c5vv")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_6urnh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qm4jg")
}

[node name="Cooldown" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
